force-app/main/default/objects/util_closer_Settings__c/util_closer_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the Case Status Auto-Closer batch system.</description>
    <label>Case Auto-Closer Settings</label>
</CustomObject>