force-app/main/default/objects/util_closer_Settings__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <defaultValue>&quot;0 0 2 * * ?&quot;</defaultValue>
    <description>Cron expression for scheduling the batch job.</description>
    <inlineHelpText>Enter a valid cron expression. Default is daily at 2 AM (0 0 2 * * ?).</inlineHelpText>
    <label>Cron Expression</label>
    <length>120</length>
    <type>Text</type>
</CustomField>