force-app/main/default/objects/util_closer_Settings__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, emit verbose debug logs during batch execution.</description>
    <inlineHelpText>Enable to output detailed debug logs during batch processing.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>