force-app/main/default/objects/util_closer_Settings__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master switch to enable/disable the batch job.</description>
    <inlineHelpText>When unchecked, the batch job will not process any records.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>