force-app/main/default/objects/util_closer_Settings__c/fields/Log_Rule_Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Log_Rule_Evaluations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, logs detailed per-rule evaluation results for each case.</description>
    <inlineHelpText>Enable to include detailed rule evaluation information in case logs. Requires Verbose Logging to be enabled.</inlineHelpText>
    <label>Log Rule Evaluations</label>
    <type>Checkbox</type>
</CustomField>