force-app/main/default/objects/util_closer_Settings__c/fields/Scheduled_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Job_Name__c</fullName>
    <defaultValue>&quot;util_closer_CaseStatusJob&quot;</defaultValue>
    <description>Name identifier for the scheduled job.</description>
    <inlineHelpText>The name used to identify this scheduled job in Salesforce Setup.</inlineHelpText>
    <label>Scheduled Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>