force-app/main/default/objects/util_closer_Settings__c/fields/Verbose_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Verbose_Logging_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, creates detailed case-level logs for each batch execution.</description>
    <inlineHelpText>Enable to create detailed Case Log records for analysis. Off by default to conserve storage.</inlineHelpText>
    <label>Verbose Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>